After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679508 - Another porting problem
Another porting problem
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: python
git master
Other Linux
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2012-07-06 11:31 UTC by Bastien Nocera
Modified: 2012-07-17 18:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2012-07-06 11:31:55 UTC
libpeas should warn when Python functions are missing from the plugin object. I had class functions "activate"and "deactivate" when the Python support code is waiting for "do_activate", "do_deactivate" and "do_update_state".
Comment 1 Garrett Regier 2012-07-17 18:47:11 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.