Warn if activate or deactivate are not implemented

https://bugzilla.gnome.org/show_bug.cgi?id=679508